# tauri-on-bazel

./: .bazelrc  .gitignore  .npmrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.storybook/: main.js
app/: BUILD.bazel
app/_lib/: menus.ts
app/_ui/: address-bar.tsx
app/_ui/components/: button.tsx  chat-panel.tsx  empty-screen.tsx  prompt-form.tsx
app/chat/[categorySlug]/: page.tsx
app/play/: layout.tsx
app/play/(checkout)/: layout.tsx
app/play/(main)/: page.tsx
app/play/(shop)/[categorySlug]/: layout.tsx  page.tsx  template.tsx
docs/: learn.md
frontend/desktop/: BUILD  package-lock.json  package.json
frontend/desktop/app/: layout.tsx  page.tsx
frontend/desktop/app/_ui/: global-nav.tsx  tab.tsx
frontend/desktop/app/_ui/components/: button.tsx  icons.tsx  tooltip.tsx
frontend/desktop/app/chat/: layout.tsx  page.tsx
frontend/desktop/app/chat/[categorySlug]/: layout.tsx
frontend/desktop/app/chat/[categorySlug]/[subCategorySlug]/: page.tsx
frontend/desktop/app/play/: page.tsx
frontend/desktop/app/play/(main)/: layout.tsx
frontend/desktop/app/play/(marketing)/: layout.tsx
frontend/desktop/app/play/(shop)/: layout.tsx
frontend/desktop/app/play/(shop)/[categorySlug]/[subCategorySlug]/: page.tsx
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/src/: main.rs
pages/: index.tsx
public/: BUILD.bazel
src-tauri/: BUILD.bazel  tauri.conf.json
