# Marker that this folder is the root of a Bazel workspace
load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = [
        "1.77.0"
    ],
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")

crates_repository(
    name = "crate_index",
    cargo_lockfile = "//src-tauri:Cargo.lock",
    manifests = ["//src-tauri:Cargo.toml"],
    packages = {
        "tauri-build": crate.spec(
            version = "1.5",
        ),
    },
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()
